--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "odafra",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "colors": "^1.4.0",
+    "dotenv": "^17.2.1",
+    "express": "^4.21.2",
+    "mongoose": "^8.18.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
