--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "author": "odafra",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
-    "mongoose": "^8.18.0"
+    "express-validator": "^7.2.1",
+    "mongoose": "^8.18.0",
+    "slug": "^11.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
+    "@types/slug": "^5.0.9",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
